# unity-plugins-test

./: .gitignore  README.md
NativeRenderingPlugin/: CMakeLists.txt
NativeRenderingPlugin/include/: RenderingPlugin.h  platform.hpp
NativeRenderingPlugin/jni/: Android.mk.in
NativeRenderingPlugin/src/: RenderingPlugin.cpp  lod_plane.cpp  shaders.cpp  tests.cpp
RenderingPlugin/: CMakeLists.txt  RenderingPlugin.cpp
RenderingPlugin/WSAVisualStudio2012/: RenderingPlugin.vcxproj  RenderingPlugin.vcxproj.filters  SimpleVertexShader.hlsl
RenderingPlugin/include/: RenderingPlugin.h  UnityPluginInterface.h  lod_plane.hpp  platform.hpp  shaders.hpp
RenderingPlugin/jni/: Android.mk  Android.mk.in  Application.mk  Application.mk.in
RenderingPlugin/src/: RenderingPlugin.cpp  lod_plane.cpp  shaders.cpp  tests.cpp
UnityProject/Assets/: UseRenderingPlugin.cs  scene.unity
UnityProject/Assets/Cardboard/Scripts/VRDevices/: BaseCardboardDevice.cs
UnityProject/Assets/Editor/: MyBuildPostprocessor.cs
UnityProject/Assets/Plugins/RenderingPlugin.bundle/Contents/: Info.plist
UnityProject/Assets/Plugins/RenderingPlugin.bundle/Contents/MacOS/: RenderingPlugin
UnityProject/Assets/Scripts/: MoveCamera.cs  UseRenderingPlugin.cs
UnityProject/Assets/Shaders/: basic_fragment.shader.txt  basic_vertex.shader.txt
UnityProject/ProjectSettings/: ProjectSettings.asset
